# raycast-scripts

./: README.md  pyproject.toml
scripts/: yabai-swap-east.sh  yabai-swap-south.sh
src/raycast_scripts/: __init__.py
