[tool.poetry]
name = "raycast-scripts"
version = "0.1.0"
description = ""
authors = ["Kuangye Chen <chen.kuangye@gmail.com>"]
readme = "README.md"
packages = [{include = "raycast_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
