[project]
name = "raycast-scripts"
version = "0.1.0"
description = "Scripts for raycast"
authors = [{ name = "Kuangye Chen", email = "chen.kuangye@gmail.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/raycast_scripts"]
